--- a/src/components/Mask/Mask.scss
+++ b/src/components/Mask/Mask.scss
@@ -1,10 +1,13 @@
 
-@import "../../scss/mixin";
-@import "../../scss/animations/_fadein";
+@import "../../scss/animations/_fade";
 
 .ui-mask {
-    @include fixed-full();
-    @include fadein(0.3s);
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    animation: fade-in 0.2s ease-out;
     background: rgba(0, 0, 0, .5);
     display: none;
 
