--- a/src/components/ModalFooter/ModalFooter.scss
+++ b/src/components/ModalFooter/ModalFooter.scss
@@ -7,7 +7,8 @@
     height: 50px;
     border-top: 1px solid #d6d6d6;
     box-sizing: content-box;
-
+    z-index: 1001;
+    
     ul {
         margin: 0;
         padding: 0;
