--- a/src/pages/App/App.scss
+++ b/src/pages/App/App.scss
@@ -2,11 +2,7 @@
 @import '../../scss/base';
 
 .App-container {
-  position: fixed;
-  top: 50px;
-  bottom: 50px;
-  left: 0;
-  right: 0;
+  margin: 50px 0;
   padding: 40px;
 }
 
