--- a/src/components/ModalFooter/ModalFooter.scss
+++ b/src/components/ModalFooter/ModalFooter.scss
@@ -1,56 +1,53 @@
 
 .ui-modal-footer {
-    position: absolute;
-    left: 0;
-    bottom: 0;
+  width: 100%;
+  height: 50px;
+  border-top: 1px solid #d6d6d6;
+  box-sizing: content-box;
+  z-index: 1001;
+  
+  > ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: table;
     width: 100%;
-    height: 50px;
-    border-top: 1px solid #d6d6d6;
-    box-sizing: content-box;
-    z-index: 1001;
-    
-    ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        display: table;
+
+    > li {
+      display: table-cell;
+      vertical-align: middle;
+      height: 100%;
+
+      button {
+        background-color: #fff;
         width: 100%;
+        height: 50px;
+        color: #206fe8;
+        font-size: 16px;
+        border: none;
 
-        li {
-            display: table-cell;
-            vertical-align: middle;
-            height: 100%;
-
-            button {
-                background-color: #fff;
-                width: 100%;
-                height: 50px;
-                color: #206fe8;
-                font-size: 16px;
-                border: none;
-
-                &:active {
-                    background-color: #ebebeb;
-                }
-            }
-
-            &:first-of-type {
-                button {
-                    border-bottom-left-radius: 8px;
-                }   
-            }
-
-            &:last-of-type {
-                button {
-                    border-bottom-right-radius: 8px;
-                }   
-            }
-
-            &:nth-of-type(n+2) {
-                border-left: solid 1px #cfcfd1;
-            }
-
-
+        &:active {
+          background-color: #ebebeb;
         }
+      }
+
+      &:first-of-type {
+        button {
+          border-bottom-left-radius: 8px;
+        }   
+      }
+
+      &:last-of-type {
+        button {
+          border-bottom-right-radius: 8px;
+        }   
+      }
+
+      &:nth-of-type(n+2) {
+        border-left: solid 1px #cfcfd1;
+      }
+
+
     }
+  }
 }
