width can use string for x%

--- a/src/components/Toast/Toast.scss
+++ b/src/components/Toast/Toast.scss
@@ -21,7 +21,7 @@
     z-index: 301;
 
     >.ui-toast-body {
-      padding: 20px;
+      /*padding: 20px;*/
       font-size: 16px;
       overflow: auto;
       user-select: auto;
